fix: update CORS origins for Vercel deployment